--- a/src/components/NotesCard/NotesCard.css
+++ b/src/components/NotesCard/NotesCard.css
@@ -21,7 +21,7 @@
 }
 
 .notes-card-text {
-  padding: 1rem 0;
+  padding-top: 0.3rem;
   height: 200px;
   font-size: var(--font-size-6);
   display: -webkit-box;
@@ -37,6 +37,16 @@
   padding: 1rem 0;
   display: flex;
   justify-content: space-between;
+}
+
+.priority {
+  font-size: var(--font-size-6);
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  padding: 0.2rem 0.5rem;
+  width: max-content;
+  border-radius: 10px;
+  text-transform: uppercase;
 }
 
 .notes-creation-details {
