feat: added colors

--- a/src/components/NotesCard/NotesCard.css
+++ b/src/components/NotesCard/NotesCard.css
@@ -1,11 +1,11 @@
 .notes-card {
-  background: var(--secondary-color);
   height: 300px;
   border-radius: 5px;
   box-shadow: 0 0 5px rgb(0 0 0 / 20%);
   padding: 1rem 2rem;
   display: flex;
   flex-direction: column;
+  color: var(--black-color);
 }
 
 .notes-card-header {
@@ -74,4 +74,29 @@
 
 .notes-card-action:hover i {
   color: var(--primary-color);
+}
+
+/* COLORS */
+.notes-card.white {
+  background-color: #f4f4f4;
+}
+
+.notes-card.green {
+  background-color: #93c572;
+}
+
+.notes-card.yellow {
+  background-color: #edc126;
+}
+
+.notes-card.red {
+  background-color: #ef5354;
+}
+
+.notes-card.blue {
+  background-color: #1b98f5;
+}
+
+.notes-card.orange {
+  background-color: #ed9121;
 }
