--- a/src/components/NotesModal/NotesModal.css
+++ b/src/components/NotesModal/NotesModal.css
@@ -77,7 +77,7 @@ option {
 }
 
 .note-text.blue > .ql-snow {
-  background-color: #1b98f5;
+  background-color: #51e1ed;
 }
 
 .note-text.orange > .ql-snow {
