--- a/src/components/NotesModal/NotesModal.css
+++ b/src/components/NotesModal/NotesModal.css
@@ -83,3 +83,20 @@ option {
 .note-text.orange > .ql-snow {
   background-color: #ed9121;
 }
+
+/* MEDIA QUERIES */
+
+@media (max-width: 768px) {
+  .note-editor {
+    width: 33rem;
+  }
+
+  .note-editor-options {
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+
+  .note-editor-footer {
+    justify-content: center;
+  }
+}
