--- a/src/components/SideNav/SideNav.css
+++ b/src/components/SideNav/SideNav.css
@@ -57,3 +57,37 @@
   background: var(--primary-color);
   color: var(--secondary-color);
 }
+
+.fa-xmark {
+  display: none;
+}
+
+/* MEDIA QUERIES */
+
+@media (max-width: 768px) {
+  .side-nav {
+    position: fixed;
+    z-index: 2;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .side-nav-active {
+    transform: translateX(0%);
+  }
+
+  .side-nav-brand {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .fa-xmark {
+    font-size: var(--font-size-4);
+    margin-left: 1rem;
+    display: inline-block;
+  }
+
+  .empty-container {
+    padding: 2rem;
+  }
+}
