--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -2,8 +2,7 @@
   /* font variable */
   --default-font: "Montserrat", sans-serif;
 
-  /* toast colors */
-
+  /* toast color */
   --toastify-color-info: #7d4cc8;
 
   /* theme colors */
