--- a/src/components/SideNav/SideNav.css
+++ b/src/components/SideNav/SideNav.css
@@ -62,6 +62,12 @@
   display: none;
 }
 
+.flex-align {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* MEDIA QUERIES */
 
 @media (max-width: 768px) {
