--- a/src/Pages/Notes/Notes.css
+++ b/src/Pages/Notes/Notes.css
@@ -69,6 +69,7 @@
   transform: scale(0);
   transition: transform 0.3s ease-in-out;
   z-index: 3;
+  cursor: pointer;
 }
 
 .note-editor-wrapper.modal-active,
