--- a/src/Pages/Authentication/authentication.css
+++ b/src/Pages/Authentication/authentication.css
@@ -1,6 +1,6 @@
 .login-section,
 .signup-section {
-  height: 100%;
+  height: 100vh;
   background: radial-gradient(var(--secondary-color), var(--primary-color));
 }
 
@@ -22,6 +22,10 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+.signup-form {
+  margin-top: 5rem;
 }
 
 form {
@@ -109,6 +113,7 @@ form {
   font-weight: var(--font-weight-3);
   color: var(--primary-color);
   font-size: var(--font-size-6);
+  margin-left: 0.5rem;
 }
 
 .login-text,
